--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
   <script type="importmap">
 {
   "imports": {
-    "react": "https://esm.sh/react@^19.2.3",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
     "react/": "https://esm.sh/react@^19.2.3/",
-    "lucide-react": "https://esm.sh/lucide-react@^0.562.0"
+    "react": "https://esm.sh/react@^19.2.3",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/"
   }
 }
 </script>
@@ -69,5 +69,7 @@
       <div class="blob blob-3"></div>
     </div>
     <div id="root"></div>
+    <!-- Esta linha é essencial para o Vite carregar o seu React App -->
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
