--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
@@ -58,6 +59,8 @@
     "react/": "https://esm.sh/react@^19.2.3/",
     "react": "https://esm.sh/react@^19.2.3",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "firebase/app": "https://www.gstatic.com/firebasejs/10.8.0/firebase-app.js",
+    "firebase/firestore": "https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore.js",
     "firebase/": "https://esm.sh/firebase@^12.7.0/"
   }
 }
@@ -70,7 +73,6 @@
       <div class="blob blob-3"></div>
     </div>
     <div id="root"></div>
-    <!-- Esta linha é essencial para o Vite carregar o seu React App -->
     <script type="module" src="/index.tsx"></script>
   </body>
 </html>
