--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
     <base href="/" />
     <title>Aprenda Brincando</title>
     <script src="https://cdn.tailwindcss.com"></script>
@@ -14,6 +14,17 @@
         touch-action: manipulation;
         overflow: hidden;
         background: linear-gradient(135deg, #fdfbfb 0%, #ebedee 100%);
+      }
+
+      /* Safe Area Utilities */
+      .pb-safe {
+        padding-bottom: env(safe-area-inset-bottom);
+      }
+      .pt-safe {
+        padding-top: env(safe-area-inset-top);
+      }
+      .mb-safe {
+        margin-bottom: env(safe-area-inset-bottom);
       }
 
       /* Animated Background */
