fix: Improve safe area padding and title responsiveness
Increase bottom safe area padding and adjust title visibility on mobile to prevent UI overlap and improve user experience on various devices.

--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
         background: linear-gradient(135deg, #fdfbfb 0%, #ebedee 100%);
       }
 
-      /* Safe Area Utilities */
+      /* Safe Area Utilities - Increased Padding */
       .pb-safe {
-        padding-bottom: env(safe-area-inset-bottom);
+        padding-bottom: calc(env(safe-area-inset-bottom) + 32px);
       }
       .pt-safe {
         padding-top: env(safe-area-inset-top);
       }
       .mb-safe {
-        margin-bottom: env(safe-area-inset-bottom);
+        margin-bottom: calc(env(safe-area-inset-bottom) + 32px);
       }
 
       /* Animated Background */
