feat: Implement child lock and adjust UI padding
Add a child lock feature to prevent accidental interactions. Adjust safe area padding in CSS to accommodate this and improve layout on various devices. Enhance memory card text responsiveness for better readability.

--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
         background: linear-gradient(135deg, #fdfbfb 0%, #ebedee 100%);
       }
 
-      /* Safe Area Utilities - Increased Padding */
+      /* Safe Area Utilities - Increased Padding to 64px */
       .pb-safe {
-        padding-bottom: calc(env(safe-area-inset-bottom) + 32px);
+        padding-bottom: calc(env(safe-area-inset-bottom) + 12px);
       }
       .pt-safe {
         padding-top: env(safe-area-inset-top);
       }
       .mb-safe {
-        margin-bottom: calc(env(safe-area-inset-bottom) + 32px);
+        margin-bottom: calc(env(safe-area-inset-bottom) + 64px);
       }
 
       /* Animated Background */
