--- a/index.html
+++ b/index.html
@@ -7,61 +7,71 @@
     <base href="/" />
     <title>Aprenda Brincando</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;600;700&display=swap" rel="stylesheet">
     <style>
       body {
         font-family: 'Fredoka', sans-serif;
         touch-action: manipulation;
         overflow: hidden;
         background: linear-gradient(135deg, #fdfbfb 0%, #ebedee 100%);
+        -webkit-tap-highlight-color: transparent;
+        user-select: none;
       }
 
-      /* Safe Area Utilities - Increased Padding to 64px */
-      .pb-safe {
-        padding-bottom: calc(env(safe-area-inset-bottom) + 44px);
-      }
-      .pt-safe {
-        padding-top: env(safe-area-inset-top);
-      }
-      .mb-safe {
-        margin-bottom: calc(env(safe-area-inset-bottom) + 64px);
-      }
+      /* Safe Area Utilities */
+      .pb-safe { padding-bottom: calc(env(safe-area-inset-bottom) + 20px); }
+      .pt-safe { padding-top: env(safe-area-inset-top); }
+      .mb-safe { margin-bottom: calc(env(safe-area-inset-bottom) + 20px); }
 
       /* Animated Background */
       .bg-animation {
         position: fixed;
-        top: 0;
-        left: 0;
-        width: 100vw;
-        height: 100vh;
-        z-index: -1;
-        overflow: hidden;
-        background: #E0F7FA;
+        top: 0; left: 0; width: 100vw; height: 100vh;
+        z-index: -1; overflow: hidden;
+        background: #F0F9FF;
       }
       .blob {
-        position: absolute;
-        filter: blur(40px);
-        opacity: 0.6;
-        animation: float 20s infinite alternate;
+        position: absolute; filter: blur(60px); opacity: 0.5;
+        animation: float 25s infinite alternate ease-in-out;
+        will-change: transform;
       }
-      .blob-1 { top: -10%; left: -10%; width: 50vw; height: 50vw; background: #FFCDD2; animation-delay: 0s; border-radius: 40% 60% 70% 30% / 40% 50% 60% 50%; }
-      .blob-2 { top: 40%; right: -20%; width: 60vw; height: 60vw; background: #E1BEE7; animation-delay: -5s; border-radius: 60% 40% 30% 70% / 60% 30% 70% 40%; }
-      .blob-3 { bottom: -10%; left: 20%; width: 40vw; height: 40vw; background: #B3E5FC; animation-delay: -10s; border-radius: 30% 70% 70% 30% / 30% 30% 60% 40%; }
+      .blob-1 { top: -10%; left: -10%; width: 60vw; height: 60vw; background: #FFC1CC; animation-delay: 0s; border-radius: 40% 60% 70% 30% / 40% 50% 60% 50%; }
+      .blob-2 { top: 40%; right: -20%; width: 70vw; height: 70vw; background: #E9D5FF; animation-delay: -5s; border-radius: 60% 40% 30% 70% / 60% 30% 70% 40%; }
+      .blob-3 { bottom: -10%; left: 20%; width: 50vw; height: 50vw; background: #BAE6FD; animation-delay: -10s; border-radius: 30% 70% 70% 30% / 30% 30% 60% 40%; }
 
       @keyframes float {
         0% { transform: translate(0, 0) rotate(0deg); }
-        100% { transform: translate(30px, 50px) rotate(20deg); }
+        100% { transform: translate(40px, 60px) rotate(10deg); }
       }
 
-      .custom-scrollbar::-webkit-scrollbar {
-        width: 6px;
+      /* UX Animations */
+      @keyframes shake {
+        0%, 100% { transform: translateX(0); }
+        20% { transform: translateX(-6px) rotate(-2deg); }
+        40% { transform: translateX(6px) rotate(2deg); }
+        60% { transform: translateX(-3px); }
+        80% { transform: translateX(3px); }
       }
-      .custom-scrollbar::-webkit-scrollbar-track {
-        background: rgba(0,0,0,0.02);
+      .animate-shake { animation: shake 0.5s cubic-bezier(.36,.07,.19,.97) both; }
+
+      @keyframes popIn {
+        0% { transform: scale(0.5); opacity: 0; }
+        70% { transform: scale(1.1); }
+        100% { transform: scale(1); opacity: 1; }
       }
-      .custom-scrollbar::-webkit-scrollbar-thumb {
-        background: rgba(0,0,0,0.1);
-        border-radius: 10px;
+      .animate-pop { animation: popIn 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards; }
+
+      /* Scrollbar */
+      .custom-scrollbar::-webkit-scrollbar { width: 6px; }
+      .custom-scrollbar::-webkit-scrollbar-track { background: transparent; }
+      .custom-scrollbar::-webkit-scrollbar-thumb { background: rgba(0,0,0,0.1); border-radius: 10px; }
+      
+      /* Glass Utility */
+      .glass-panel {
+        background: rgba(255, 255, 255, 0.7);
+        backdrop-filter: blur(12px);
+        -webkit-backdrop-filter: blur(12px);
+        border: 1px solid rgba(255, 255, 255, 0.5);
       }
     </style>
   <script type="importmap">
